--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Cory Grunkemeyer</title>
   <meta name="description" content="Welcome to my personal site.">
 
-  <link href="http://fonts.googleapis.com/css?family=Overpass+Mono:300,400,600,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="/assets/main.css?1524254108651045000">
  
 </head>
