--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Welcome to my personal site.">
 
   <link href="https://fonts.googleapis.com/css?family=Overpass+Mono:300,400,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/main.css?1524254108651045000">
+  <link rel="stylesheet" href="/assets/main.css">
  
 </head>
   <body>
