--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home">
-          <p class="home-description">Hi there. My name is <strong>Cory</strong>. I'm a <strong>product designer</strong> at <a href="https://slack.com" target="_blank">Slack</a>. I design things, take pictures, and drink coffee.</p>
+          <p class="home-description">Hi there. My name is <strong>Cory</strong>. I'm a <strong>product designer</strong> at <a href="https://slack.com" target="_blank">Slack</a>. I design things, tinker with experimental music, and drink coffee.</p>
           <div class="link-list">
             <a href="https://twitter.com/corygrunk/" target="_blank">Twitter</a> ∙
             <a href="https://github.com/corygrunk/" target="_blank">Github</a> ∙ 
