--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home">
-          <p class="home-description">Hi there. My name is <strong>Cory</strong>. I'm a <strong>product designer</strong> at <a href="https://slack.com" target="_blank">Slack</a>. I design things, tinker with experimental music, and drink coffee.</p>
+          <p class="home-description">
+            Hello. I’m a <strong>product designer</strong> at <a href="https://slack.com" target="_blank">Slack</a>. 
+            Previously, I designed a workflow automation product called Missions, which was 
+            <a href="https://slack.com/blog/productivity/slack-acquires-robot-pencils-missions-to-make-it-easy-for-non-tech-teams-to-streamline-work" target="_blank">acquired by Slack</a> 
+            and evolved into Slack's Workflow Builder. I am excited about design and code and building products that 
+            help people get their jobs done.
+          </p>
           <div class="link-list">
-            <a href="https://twitter.com/corygrunk/" target="_blank">Twitter</a> ∙
+            <s><a href="https://twitter.com/corygrunk/" target="_blank">Twitter</a></s> ∙
+            <a href="https://mastodon.social/@corygrunk" target="_blank">Mastodon</a> ∙
             <a href="https://github.com/corygrunk/" target="_blank">Github</a> ∙ 
             <a href="https://www.linkedin.com/in/corygrunk/" target="_blank">LinkedIn</a>
           </div>
