content is hard

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             Hello. I’m a <strong>product designer</strong> at <a href="https://slack.com" target="_blank">Slack</a>. 
             Previously, I designed a workflow automation product called Missions, which was 
             <a href="https://slack.com/blog/productivity/slack-acquires-robot-pencils-missions-to-make-it-easy-for-non-tech-teams-to-streamline-work" target="_blank">acquired by Slack</a> 
-            and evolved into Slack's Workflow Builder. I am excited about design and code and building products that 
+            and evolved into Slack's Workflow Builder. I am excited about design, code, and building products that 
             help people get their jobs done.
           </p>
           <div class="link-list">
