--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="wrapper">
         <div class="home">
           <p class="home-description">
-            Hello. I’m a <strong>product designer</strong> at <a href="https://slack.com" target="_blank">Slack</a>. 
+            Hello. I’m a <strong>product designer</strong> at <a href="https://gitpod.io" target="_blank">Gitpod</a>. 
             Previously, I designed a workflow automation product called Missions, which was 
             <a href="https://slack.com/blog/productivity/slack-acquires-robot-pencils-missions-to-make-it-easy-for-non-tech-teams-to-streamline-work" target="_blank">acquired by Slack</a> 
             and evolved into Slack's Workflow Builder. I am excited about design, code, and building products that 
