--- a/slack-gsheets.html
+++ b/slack-gsheets.html
@@ -1,22 +1,23 @@
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Cory Grunkemeyer &#x2022; Product/UX Designer</title>
-  <meta name="description" content="Cory Grunkemeyer's product design portfolio.">
-
+  <title>Cory Grunkemeyer &#x2022; Slack Gsheets</title>
   <link rel="stylesheet" type="text/css" href="main.css">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
+  <div class="container project">
 
     <header>
-      <h1>Cory Grunkemeyer</h1>
+      <a href="index.html" class="header-back-link">
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M16.9428 5.72387C17.4635 6.24457 17.4635 7.08879 16.9428 7.60949L8.55226 16L16.9428 24.3905C17.4635 24.9112 17.4635 25.7555 16.9428 26.2762C16.4221 26.7969 15.5779 26.7969 15.0572 26.2762L5.72384 16.9428C5.20314 16.4221 5.20314 15.5779 5.72384 15.0572L15.0572 5.72387C15.5779 5.20317 16.4221 5.20317 16.9428 5.72387Z" fill="black"/>
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M5.33331 16C5.33331 15.2636 5.93027 14.6667 6.66665 14.6667H25.3333C26.0697 14.6667 26.6666 15.2636 26.6666 16C26.6666 16.7364 26.0697 17.3333 25.3333 17.3333H6.66665C5.93027 17.3333 5.33331 16.7364 5.33331 16Z" fill="black"/>
+        </svg>   -->
+        <h1>Cory Grunkemeyer</h1>
+      </a>
       <div class="header-links">
         <a href="mailto:corygrunk@gmail.com">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
@@ -31,42 +32,18 @@
         </a>
     </header>
 
-    <div class="home-content">
-      <h2>I'm a product and UX designer creating impactful product solutions.</h2>
-      <p>Currently product design @ <a href="https://www.gitpod.io" target="_blank">Gitpod</a>. Previously product design @ <a href="https://slack.com" target="_blank">Slack</a>.</p>
+    <div class="project-details">
+      <h3>Slack Gsheets + Workflow Builder</h3>
+      <p>
+        While Workflow Builder offered many automation capabilities, a clear user need emerged: easily collecting and organizing responses from Slack conversations. I led the design of our Google Sheets integration, which let teams create simple forms in Slack and automatically populate spreadsheets with responses. This streamlined previously manual data collection processes and quickly became one of our most-used features. Through careful attention to both platforms' patterns and extensive user research, we crafted an experience that felt natural in both Slack and Sheets, making data collection accessible to non-technical users.
+      </p>
+
+      <img src="img/slack-gsheets.png" alt="Slack Gsheets">
+      <img src="img/slack-gsheets-existing.png" alt="Slack Gsheets Existing Sheet">
+      <img src="img/slack-gsheets-premissions.png" alt="Slack Gsheets Permissions">
+
     </div>
 
-    <div class="project-grid">
-      <a class="project-thumb" href="gitpod-env.html">
-        <img src="img/environment-details-thumb.png" alt="Gitpod Environment Details">
-        <h3>Gitpod</h3>
-        <p>Managed developer environments</p>
-      </a>
-
-      <a class="project-thumb" href="gitpod-design-system.html">
-        <img src="img/design-system-thumbnail.png" alt="Gitpod Design System">
-        <h3>Gitpod</h3>
-        <p>Design system</p>
-      </a>
-
-      <a class="project-thumb" href="slack-workflow-builder.html">
-        <img src="img/slack-workflow-builder-thumbnail.png" alt="Slack Workflow Builder">
-        <h3>Slack</h3>
-        <p>Workflow Builder</p>
-      </a>
-
-      <a class="project-thumb" href="slack-gsheets.html">
-        <img src="img/slack-gsheets-thumbnail.png" alt="Slack Gsheets">
-        <h3>Slack</h3>
-        <p>Gsheets + Workflow Builder</p>
-      </a>
-
-      <a class="project-thumb" href="slack-block-kit.html">
-        <img src="img/slack-block-kit-thumbnail.png" alt="Slack Block Kit">
-        <h3>Slack</h3>
-        <p>Block Kit</p>
-      </a>
-    </div>
   </div>
 
 </body>
