fixing css... still

--- a/slack-gsheets.html
+++ b/slack-gsheets.html
@@ -1,6 +1,12 @@
 <html>
 <head>
-  <title>Cory Grunkemeyer &#x2022; Slack Gsheets</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Cory Grunkemeyer &#x2022; Gitpod</title>
+  <meta name="description" content="Cory Grunkemeyer's product design portfolio.">
+  
   <link rel="stylesheet" type="text/css" href="main.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
