--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="project-grid">
       <a class="project-thumb" href="gitpod-env.html">
         <img src="img/environment-details-thumb.png" alt="Gitpod Environment Details">
-        <h3>Gitpod</h3>
+        <h3>Gitpod Flex</h3>
         <p>Managed developer environments</p>
       </a>
 
