--- a/gitpod-env.html
+++ b/gitpod-env.html
@@ -35,7 +35,7 @@
     </header>
 
     <div class="project-details">
-      <h3>Gitpod</h3>
+      <h3>Gitpod Flex</h3>
       <p>
         As the sole designer for Gitpod's Flex product, I helped enterprises solve a critical challenge: how to provide developers with standardized environments while maintaining strict security requirements. Flex allows organizations to host managed developer environments on their own infrastructure, giving them complete control over source code and internal access. I designed experiences that balanced enterprise security needs with developer productivity—from seamless SSO integration to automated provisioning. The product marked Gitpod's evolution from cloud development environments to secure, self-hosted solutions that protect intellectual property.
       </p>
