--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="home-content">
       <h2>I'm a product and UX designer creating impactful product solutions.</h2>
-      <p>Currently product design @ <a href="https://www.gitpod.io" target="_blank">Gitpod</a>. Previously product design @ <a href="https://slack.com" target="_blank">Slack</a>.</p>
+      <p>Currently product design @ <a href="https://mytra.ai" target="_blank">Mytra</a>. Previously product design @ <a href="https://slack.com" target="_blank">Slack</a> and <a href="https://gitpod.io" target="_blank">Gitpod</a>.</p>
     </div>
 
     <div class="project-grid">
